keys removed from  notebook

--- a/twitter_wordcloud/tweepy-wordcloud.ipynb
+++ b/twitter_wordcloud/tweepy-wordcloud.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Este notebook fue hecho por [@silvercorp](https://www.twitter.com/silvercorp) en el Meetup de Data Science de Platzi"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -131,10 +138,10 @@
    "outputs": [],
    "source": [
     "#Tus credenciales consumer_key, consumer_secret, token_key, token_secret\n",
-    "consumer_key = 'NHM7F8y0d4ERLsh1FdXKyez3f'\n",
-    "consumer_secret = 'vd2UsO4mJ7H7oMbufEKhVLQZdj9aB4eOkkwjVG3CoRkOhvxhRU'\n",
-    "access_token_key = '69721550-yNbG4UDRpt3H5XJJA4qKWtQxP6WQUwOdIDf2T4MMS'\n",
-    "access_token_secret = '5t2MdIkdz9OnZVDKX4rnL4i2eS9Uz1pZwV8vxRnMHxYL4'"
+    "consumer_key = ''\n",
+    "consumer_secret = ''\n",
+    "access_token_key = ''\n",
+    "access_token_secret = ''"
    ]
   },
   {
